--- a/Inform_BusRoute/app/src/main/res/values/strings.xml
+++ b/Inform_BusRoute/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
         <item>福井県</item>
     </string-array>
 
+    <string-array name="days">
+        <item>平日</item>
+        <item>休日</item>
+    </string-array>
+
 </resources>
